fix: center proeject roles on small screens

--- a/src/styles/5-components/_c-project.scss
+++ b/src/styles/5-components/_c-project.scss
@@ -126,7 +126,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;;
 
     padding-top: 20px;
 
